--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -21,11 +21,11 @@
                     <h1>Login</h1>
 
                     <label for="username"><b>UCID</b></label>
-                    <input type="text" placeholder="Enter UCID" name="username" id="username" />
+                    <input type="text" placeholder="Enter UCID" maxlength="6" name="username" id="username" />
                     <p id="errorUsername" class="errorMessage"></p>
 
                     <label for="password"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="password" id="password" />
+                    <input type="password" placeholder="Enter Password" maxlength="20" name="password" id="password" />
                     <p id="errorPassword" class="errorMessage"></p>
 
                     <input type="button" name="submit" id="submit" value="Login" onclick="login()">
